test/bad/lambdas/lambda06.px

func f(Int->Char->Int g) def
    return

f(_+_)
